✅ Proyecto Estampaimpleto: tests, Docker, CI con GitHub Actions