@@ -2,14 +2,18 @@ package com.estampaider.productos.security;
 
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextImpl;
 import org.springframework.security.web.server.context.ServerSecurityContextRepository;
+import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 
 import java.util.Collections;
+import java.util.List;
 
+@Component
 public class JwtSecurityContextRepository implements ServerSecurityContextRepository {
 
     private final JwtUtil jwtUtil;
@@ -26,12 +30,12 @@ public class JwtSecurityContextRepository implements ServerSecurityContextReposi
     @Override
     public Mono<SecurityContext> load(ServerWebExchange exchange) {
         String authHeader = exchange.getRequest().getHeaders().getFirst(HttpHeaders.AUTHORIZATION);
-
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            if (jwtUtil.validateToken(token)) {
-                var auth = new UsernamePasswordAuthenticationToken(
-                        jwtUtil.getUsernameFromToken(token), null, Collections.emptyList());
+            if (jwtUtil.validate(token)) {
+                String username = jwtUtil.getUsername(token);
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_USER")); // Default role
+                var auth = new UsernamePasswordAuthenticationToken(username, null, authorities);
                 return Mono.just(new SecurityContextImpl(auth));
             }
         }
